# magpie

./: .gitignore  README.md  pyproject.toml  readme.md  requirements.txt
magpie/: __init__.py
magpie/books/: __init__.py  db.py  display.py  encoder.py  enricher.py  extractor.py  models.py  search.py  vector.py
magpie/cli/: __init__.py  commands.py
magpie/core/: __init__.py  chroma.py  sqlite.py
magpie/sources/: __init__.py  reddit.py
magpie/tests/: __init__.py  test_db.py  test_encoder.py  test_reddit.py  test_search.py
magpie/tests/content_types/: __init__.py  test_books.py
